--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(physics_simulation_software VERSION 0.1.0)
 
 find_package(OpenGL REQUIRED)
 find_package(glfw3 REQUIRED)
+find_package(assimp REQUIRED)
 
 # include directories
 include_directories(${CMAKE_SOURCE_DIR}/include)
@@ -34,7 +35,7 @@ set(IMGUI_HEADER
 )
 
 # Add source files
-file(GLOB_RECURSE SOURCE_FILES 
+file(GLOB_RECURSE SOURCE_FILES
 ${CMAKE_SOURCE_DIR}/src/*.c
 ${CMAKE_SOURCE_DIR}/src/*.cpp)
 
@@ -49,22 +50,23 @@ add_executable(physics_simulation_software ${SOURCE_FILES} ${IMGUI_SOURCES} ${IM
 
 # add_library(imgui STATIC ${IMGUI_SOURCES})
 target_include_directories(physics_simulation_software PUBLIC ${IMGUI_PATH} ${IMGUI_PATH}/backends ${IMGUI_HEADER})
-target_link_libraries(physics_simulation_software 
+target_link_libraries(physics_simulation_software
     glfw
     OpenGL::GL
+    assimp
 )
 
 
 # # Link libraries
 # if(WIN32)
-#     target_link_libraries(${PROJECT_NAME} 
+#     target_link_libraries(${PROJECT_NAME}
 #         ${CMAKE_SOURCE_DIR}/lib/libglfw3dll.a
 #         opengl32
 #     )
 # else()
 #     find_package(OpenGL REQUIRED)
 #     find_library(GLFW_LIBRARY glfw)
-#     target_link_libraries(${PROJECT_NAME} 
+#     target_link_libraries(${PROJECT_NAME}
 #         ${OPENGL_LIBRARIES}
 #         ${GLFW_LIBRARY}
 #         dl
