--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(physics_simulation_software VERSION 0.1.0)
 
 find_package(OpenGL REQUIRED)
 find_package(glfw3 REQUIRED)
+find_package(assimp REQUIRED)
 
 # include directories
 include_directories(${CMAKE_SOURCE_DIR}/include)
@@ -36,6 +37,9 @@ set(IMGUI_HEADER
     ${IMGUI_DIR}/backends/imgui_impl_opengl3_loader.h
 )
 
+# STB image
+set(STB_IMAGE_SOURCE ${CMAKE_SOURCE_DIR}/lib/stb.cpp)
+
 # Add source files
 file(GLOB_RECURSE SOURCE_FILES
 ${CMAKE_SOURCE_DIR}/src/*.c
@@ -50,7 +54,7 @@ ${IMGUI_PATH}/backends/*.h
 target_include_directories(glad PUBLIC ${CMAKE_SOURCE_DIR}/include/glad)
 
 # add executable
-add_executable(physics_simulation_software ${SOURCE_FILES} ${IMGUI_SOURCES} ${IMGUI_HEADERS})
+add_executable(physics_simulation_software ${SOURCE_FILES} ${IMGUI_SOURCES} ${IMGUI_HEADERS} ${STB_IMAGE_SOURCE})
 
 # add_library(imgui STATIC ${IMGUI_SOURCES})
 target_include_directories(physics_simulation_software PUBLIC ${IMGUI_PATH} ${IMGUI_PATH}/backends ${IMGUI_HEADER})
@@ -58,6 +62,7 @@ target_link_libraries(physics_simulation_software
     glad
     glfw
     OpenGL::GL
+    assimp
 )
 
 
