ImGui Quality of Life Changes

--- a/src/imgui.ini
+++ b/src/imgui.ini
@@ -10,3 +10,19 @@ Size=550,680
 Pos=25,187
 Size=339,180
 
+[Window][Mode Change]
+Pos=60,60
+Size=166,65
+
+[Window][ImGUI Manager]
+Pos=59,147
+Size=411,203
+
+[Window][Sidebar Control]
+Pos=60,60
+Size=136,46
+
+[Window][Sidebar]
+Pos=0,20
+Size=300,700
+
