CCW Fixed, ImGui Texture Import Implemented and Object Color Fixed

--- a/src/imgui.ini
+++ b/src/imgui.ini
@@ -26,3 +26,63 @@ Size=136,46
 Pos=0,20
 Size=300,700
 
+[Window][Choose Texture##ChooseTextureFile]
+Pos=333,74
+Size=600,400
+
+[Table][0x07CC0B78,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x009312AD,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD29BFE17,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x652DF588,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x4CA7D244,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x353B2C0A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9CF8598E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x66A325F5,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF816C72A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5684ACC5,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x69C54A13,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xFC7FEACF,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xED8894EF,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xB3022B46,4]
+RefScale=13
+Column 0  Sort=0v
+
