Added Bending Spring, Frictional Force, and offset in collision. Also Implemented Object Selection, Material Selection, and Lighting based on the Material Type

--- a/src/imgui.ini
+++ b/src/imgui.ini
@@ -86,3 +86,11 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0x3CC2FC08,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA76B9802,4]
+RefScale=13
+Column 0  Sort=0v
+
